#25.3 Translating .py Code

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-19 16:33+0900\n"
+"POT-Creation-Date: 2019-11-19 17:38+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,10 +22,55 @@ msgstr ""
 msgid "Search By City"
 msgstr "Buscar por Ciudad"
 
-#: templates/partials/footer.html:4
+#: templates/partials/footer.html:5
 msgid "Please don't copy us."
 msgstr "Por favor no nos copies."
 
-#: templates/partials/footer.html:6
+#: templates/partials/footer.html:7
 msgid "All rights reserved"
 msgstr "Todos los derechos reservados"
+
+#: templates/rooms/room_list.html:26
+#, python-format
+msgid "Page %(current_page)s of %(total_pages)s"
+msgstr "Página %(current_page)s de %(total_pages)s"
+
+#: users/mixins.py:13
+msgid "Can't go there"
+msgstr "No puedes ir ahí"
+
+#: users/models.py:21
+msgid "Male"
+msgstr "Hombre"
+
+#: users/models.py:22
+msgid "Female"
+msgstr "Mujer"
+
+#: users/models.py:23
+msgid "Other"
+msgstr "Otro"
+
+#: users/models.py:30
+msgid "English"
+msgstr "Inglés"
+
+#: users/models.py:31
+msgid "Korean"
+msgstr "Coreano"
+
+#: users/models.py:51
+msgid "gender"
+msgstr "género"
+
+#: users/models.py:53
+msgid "bio"
+msgstr "biografía"
+
+#: users/models.py:56
+msgid "language"
+msgstr "lenguage"
+
+#: users/models.py:83
+msgid "Verify Airbnb Account"
+msgstr "Verificar Cuenta de Airbnb"
