--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -56,7 +56,7 @@ msgstr "Iniciar Sesión"
 
 #: templates/partials/nav.html:19
 msgid "Sign up"
-msgstr ""
+msgstr "Crear Cuenta"
 
 #: templates/rooms/room_list.html:26
 #, python-format
